deploy/k8s/ops/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: db-tools
  labels:
    app.kubernetes.io/name: pgadmin
    app.kubernetes.io/part-of: kubereats
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: pgadmin
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 31091
